[package]
name = "orbital_mechanics"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
physics_types = { git = "https://github.com/frsrblch/physics_types" }
rand = "^0.8"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "calc"
harness = false