[package]
name = "orbital_mechanics"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
physics_types = { git = "https://github.com/frsrblch/physics_types" }
rand = "^0.8"
pga = { path = "C:/Users/Farseer/IdeaProjects/pga_old" }

[dev-dependencies]
criterion = "*"
plotters = "0.3.1"

[[bench]]
name = "calc"
harness = false

[[example]]
name = "plot"

[[example]]
name = "to_txt"